RESOLVED FIXED213121
MediaRecorder should not be collectable when fetching data from its backend
https://bugs.webkit.org/show_bug.cgi?id=213121
Summary MediaRecorder should not be collectable when fetching data from its backend
youenn fablet
Reported 2020-06-12 06:28:15 PDT
MediaRecorder should not be collectable when fetching data from its backend
Attachments
Patch (2.17 KB, patch)
2020-06-12 06:30 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-06-12 06:30:58 PDT
EWS
Comment 2 2020-06-15 00:42:34 PDT
Committed r263019: <https://trac.webkit.org/changeset/263019> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401724 [details].
Radar WebKit Bug Importer
Comment 3 2020-06-15 00:43:16 PDT
Note You need to log in before you can comment on or make changes to this bug.