MediaRecorder should not be collectable when fetching data from its backend https://bugs.webkit.org/show_bug.cgi?id=213121

Reviewed by Eric Carlson.

Take a pending activity when fetching data since we might want dispatch an event when receiving the fetch data.
Covered by existing tests no longer crashing in debug.

* Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::stopRecording):
(WebCore::MediaRecorder::requestData):


Canonical link: https://commits.webkit.org/225959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263019 268f45cc-cd09-0410-ab3c-d52691b4dbfc